--- a/sbw-finance-biz/pom.xml
+++ b/sbw-finance-biz/pom.xml
@@ -51,6 +51,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.biezhi</groupId>
+            <artifactId>TinyPinyin</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.sbw</groupId>
@@ -61,6 +65,10 @@
             <groupId>com.sbw</groupId>
             <artifactId>sbw-mybatis</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
         </dependency>
     </dependencies>
 
